AJAX request and display working

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Gist App</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script language="javascript" type="text/javascript" src="main.js"></script>
 </head>
 <body>
-	<p>Hello, world.</p>
+	<!-- Pagination and language selector extra credit -->
+	<button id="getGistsButton">Get Gists</button>
 </body>
 </html>
