Done with everything

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 	<!-- Pagination and language selector extra credit -->
-	<button id="getGistsButton">Get Gists</button>
+	<h2>Favorite Gists</h2>
+	<button id="clearFavorites">Clear Favorites</button>
+	<section id="favorites">
+	</section>
+	<h2>Search For More Gists</h2>
+	<button id="searchGistsButton">Search Public Gists</button>
+	<hr>
+	<section id="other">
+	</section>
 </body>
 </html>
